k8s/django_component.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: django
  template:
    metadata:
      labels:
        component: django
    spec:
      containers:
        - name: django-container
          image: vitaliyshvab/django-app:latest
          ports:
            - containerPort: 8000
          command: ["bash", "-c", "python manage.py runserver"]
---

# Cluster IP Service
apiVersion: v1
kind: Service
metadata:
  name: django-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: django
  ports:
    - port: 8000
      targetPort: 8000
