k8s/ingress_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /api/auth/login
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /api/auth/register
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /api/posts
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: react-cluster-ip-service
                  port:
                    number: 3000
